--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>microclasse</finalName>
     </build>
 
 
